@@ -1,11 +1,14 @@
 package logp
 
 import (
+	"expvar"
 	"flag"
 	"fmt"
 	"io/ioutil"
 	"log"
+	"strconv"
 	"strings"
+	"time"
 
 	"github.com/elastic/beats/libbeat/paths"
 )
@@ -21,7 +24,17 @@ type Logging struct {
 	ToSyslog  *bool `config:"to_syslog"`
 	ToFiles   *bool `config:"to_files"`
 	Level     string
+	Metrics   LoggingMetricsConfig `config:"metrics"`
 }
+
+type LoggingMetricsConfig struct {
+	Enabled *bool          `config:"enabled"`
+	Period  *time.Duration `config:"period" validate:"nonzero,min=0s"`
+}
+
+var (
+	defaultMetricsPeriod = 30 * time.Second
+)
 
 func init() {
 	// Adds logging specific flags: -v, -e and -d.
@@ -112,6 +125,8 @@ func Init(name string, config *Logging) error {
 		log.SetOutput(ioutil.Discard)
 	}
 
+	go logExpvars(&config.Metrics)
+
 	return nil
 }
 
@@ -140,4 +155,58 @@ func getLogLevel(config *Logging) (Priority, error) {
 		return 0, fmt.Errorf("unknown log level: %v", config.Level)
 	}
 	return level, nil
+}
+
+// snapshotExpvars iterates through all the defined expvars, and for the top
+// level vars that are integers it snapshots the name and value in a separate
+// map.
+func snapshotExpvars(varsMap map[string]int64) {
+	expvar.Do(func(kv expvar.KeyValue) {
+		switch kv.Value.(type) {
+		case *expvar.Int:
+			varsMap[kv.Key], _ = strconv.ParseInt(kv.Value.String(), 10, 64)
+		}
+	})
+}
+
+// buildMetricsOutput makes the delta between vals and prevVals and builds
+// a printable string with the non-zero deltas.
+func buildMetricsOutput(prevVals map[string]int64, vals map[string]int64) string {
+	metrics := ""
+	for k, v := range vals {
+		delta := v - prevVals[k]
+		if delta != 0 {
+			metrics = fmt.Sprintf("%s %s=%d", metrics, k, delta)
+		}
+	}
+	return metrics
+}
+
+// logExpvars logs at Info level the integer expvars that have changed in the
+// last interval. For each expvar, the delta from the beginning of the interval
+// is logged.
+func logExpvars(metricsCfg *LoggingMetricsConfig) {
+	if metricsCfg.Enabled != nil && *metricsCfg.Enabled == false {
+		Info("Metrics logging disabled")
+		return
+	}
+	if metricsCfg.Period == nil {
+		metricsCfg.Period = &defaultMetricsPeriod
+	}
+	Info("Metrics logging every %s", metricsCfg.Period)
+
+	ticker := time.NewTicker(*metricsCfg.Period)
+	prevVals := map[string]int64{}
+	for {
+		<-ticker.C
+		vals := map[string]int64{}
+		snapshotExpvars(vals)
+		metrics := buildMetricsOutput(prevVals, vals)
+		prevVals = vals
+		if len(metrics) > 0 {
+			Info("Non-zero metrics in the last %s:%s", metricsCfg.Period, metrics)
+		} else {
+			Info("No non-zero metrics in the last %s", metricsCfg.Period)
+		}
+	}
 }
